{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 15,
  "lineage": "bed51951-7447-d2e7-c536-fc4ed2123967",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9734ed68-621d-47ed-babd-269110dbacb1/resourceGroups/1-edbb0a66-playground-sandbox/providers/Microsoft.Network/networkInterfaces/devops-nic-00",
            "internal_domain_name_suffix": "lsnjpftbc3gebb4chbiev50kyc.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.102.128.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9734ed68-621d-47ed-babd-269110dbacb1/resourceGroups/1-edbb0a66-playground-sandbox/providers/Microsoft.Network/publicIPAddresses/devops-pip-00",
                "subnet_id": "/subscriptions/9734ed68-621d-47ed-babd-269110dbacb1/resourceGroups/1-edbb0a66-playground-sandbox/providers/Microsoft.Network/virtualNetworks/vnet-prod/subnets/internal"
              }
            ],
            "location": "southcentralus",
            "mac_address": "60-45-BD-E1-FE-49",
            "name": "devops-nic-00",
            "private_ip_address": "10.102.128.4",
            "private_ip_addresses": [
              "10.102.128.4"
            ],
            "resource_group_name": "1-edbb0a66-playground-sandbox",
            "tags": {
              "Level": "rookies"
            },
            "virtual_machine_id": "/subscriptions/9734ed68-621d-47ed-babd-269110dbacb1/resourceGroups/1-edbb0a66-playground-sandbox/providers/Microsoft.Compute/virtualMachines/devops-vm-00"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9734ed68-621d-47ed-babd-269110dbacb1/resourceGroups/1-edbb0a66-playground-sandbox/providers/Microsoft.Network/networkInterfaces/devops-nic-00|/subscriptions/9734ed68-621d-47ed-babd-269110dbacb1/resourceGroups/1-edbb0a66-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/devops-nsg",
            "network_interface_id": "/subscriptions/9734ed68-621d-47ed-babd-269110dbacb1/resourceGroups/1-edbb0a66-playground-sandbox/providers/Microsoft.Network/networkInterfaces/devops-nic-00",
            "network_security_group_id": "/subscriptions/9734ed68-621d-47ed-babd-269110dbacb1/resourceGroups/1-edbb0a66-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/devops-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9734ed68-621d-47ed-babd-269110dbacb1/resourceGroups/1-edbb0a66-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/devops-nsg",
            "location": "southcentralus",
            "name": "devops-nsg",
            "resource_group_name": "1-edbb0a66-playground-sandbox",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_SSH",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allowSSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9734ed68-621d-47ed-babd-269110dbacb1/resourceGroups/1-edbb0a66-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/devops-nsg/securityRules/Allow_SSH",
            "name": "Allow_SSH",
            "network_security_group_name": "devops-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "1-edbb0a66-playground-sandbox",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/9734ed68-621d-47ed-babd-269110dbacb1/resourceGroups/1-edbb0a66-playground-sandbox/providers/Microsoft.Network/publicIPAddresses/devops-pip-00",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.98.157.203",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "devops-pip-00",
            "resource_group_name": "1-edbb0a66-playground-sandbox",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.102.128.0/18"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9734ed68-621d-47ed-babd-269110dbacb1/resourceGroups/1-edbb0a66-playground-sandbox/providers/Microsoft.Network/virtualNetworks/vnet-prod/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "1-edbb0a66-playground-sandbox",
            "virtual_network_name": "vnet-prod"
          }
        }
      ]
    }
  ]
}